--- a/src/components/dark-container/dark-container.module.css
+++ b/src/components/dark-container/dark-container.module.css
@@ -9,6 +9,15 @@
   background: rgba(0, 0, 0, 0.8);
 }
 
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+}
+
 .closeButton {
   position: absolute;
   top: 20px;
@@ -29,7 +38,7 @@
   justify-content: center;
   width: 100%;
   height: 55px;
-  margin-top: 20px;
+  margin-top: 50px;
 }
 
 .noAvailable {
