--- a/src/components/datatable/styles/datatable.module.css
+++ b/src/components/datatable/styles/datatable.module.css
@@ -1,39 +1,43 @@
 .tableContainer {
   display: flex;
   flex-direction: column;
-  height: fit-content;
-  width: 100%;
+  justify-content: flex-start;
+  align-items: flex-start;
   overflow: auto;
   margin-bottom: 20px;
-  border: 10px solid rgba(117, 250, 252, 1);
   border-radius: 20px;
-  height: 60vh;
+  border: 6px solid #0b4686;
+  box-sizing: border-box;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  aspect-ratio: 1171 / 584 !important;
+  width: 100%;
 }
 
 .table {
-  overflow: auto;
-  background-color: #0b4686;
   border-spacing: 0px;
   border-collapse: collapse;
   width: 100%;
   height: 100%;
-  max-height: 60vh;
+  overflow: auto;
 }
 
 .thead > tr {
   color: white;
   font-family: Titan-Regular;
+  height: 80px;
   border-collapse: collapse;
 }
 
 .thead tr > :nth-child(2n + 1) {
-  background: #1159a0;
+  background: transparent;
   padding: 10px 20px;
   border-bottom: 1px solid rgba(117, 250, 252, 1);
 }
 
 .thead tr > :nth-child(2n) {
-  background: #0b4686;
+  background: #0b468660;
   padding: 10px 20px;
   border-bottom: 1px solid rgba(117, 250, 252, 1);
 }
@@ -44,12 +48,12 @@
 }
 
 .tbody tr > :nth-child(2n + 1) {
-  background: #1159a0;
+  background: transparent;
   padding: 10px 20px;
 }
 
 .tbody tr > :nth-child(2n) {
-  background: #0b4686;
+  background: #0b468660;
   padding: 10px 20px;
 }
 
