--- a/src/components/tournaments/buy-container/buy-container.module.css
+++ b/src/components/tournaments/buy-container/buy-container.module.css
@@ -2,10 +2,10 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: center;
   width: 20vw;
   min-width: 300px;
-  height: 100%;
+  height: fit-content;
 }
 
 .container {
@@ -18,6 +18,9 @@
   background-position: center center;
   position: relative;
   width: 100%;
+  height: 100%;
+  max-height: 400px;
+  min-height: 400px;
   z-index: 2;
   margin-top: -10px;
   aspect-ratio: 150/193;
@@ -44,7 +47,8 @@
   align-items: center;
   justify-content: space-between;
   height: 100%;
-  padding: 15% 10% 20%;
+  gap: 5px;
+  padding: 40px 10px 40px;
 }
 
 .title {
