--- a/src/pages/leaderboard-detail/leaderboard-detail.module.css
+++ b/src/pages/leaderboard-detail/leaderboard-detail.module.css
@@ -2,10 +2,11 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   width: 100%;
   height: 100%;
-  padding: 20px 50px;
+  min-height: 50vh;
+  padding: 50px 50px;
 }
 
 .header {
@@ -29,4 +30,6 @@
   justify-content: center;
   position: absolute;
   right: 50px;
+  gap: 10px;
+  top: 5px;
 }
