--- a/src/pages/leaderboard/leaderboard.module.css
+++ b/src/pages/leaderboard/leaderboard.module.css
@@ -2,8 +2,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   width: 100%;
   height: 100%;
-  padding: 20px 50px;
+  min-height: 50vh;
+  padding: 50px 50px;
 }
