--- a/src/pages/tournaments/tournaments.module.css
+++ b/src/pages/tournaments/tournaments.module.css
@@ -5,12 +5,12 @@
   align-items: center;
   justify-content: center;
   gap: 20px;
-  margin-top: 5vh;
   width: 100%;
-  height: 60vh;
+  height: 100%;
   overflow-x: hidden;
   overflow-y: auto;
   z-index: 3;
+  padding: 50px 50px;
 }
 
 .wrapper::-webkit-scrollbar-thumb {
