add purchase flow

--- a/src/components/buttons/button-user/button-user.module.css
+++ b/src/components/buttons/button-user/button-user.module.css
@@ -28,8 +28,9 @@
 
 .avatar {
   margin-top: 2px;
-  width: 55px;
-  height: 55px;
+  margin-left: 4px;
+  width: 45px;
+  height: 45px;
 }
 
 .content {
